# to_do_application

./: .$Untitled Diagram.drawio.bkp  .$context diagram.drawio.bkp  .dockerignore  .env.j2  .env.template  .env.test  .gitignore  README.md  Untitled Diagram.drawio  context diagram.drawio  pyproject.toml
.github/workflows/: my_ci_pipeline.yaml
ansible/: inventory.yaml  playbook.yaml
compose/: docker-compose.yaml
diagrams/: To Do App Diagrams.drawio
dockerfiles/: Dockerfile.todo_app
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variable.tf
todo_app/: app.py  test_app.py  test_view_model.py
todo_app/data/: item.py  mongo_items.py  session_items.py  trello_items.py  view_model.py
todo_app/templates/: index.html
